--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <div class="col-md-5 col-sm-12">
             <div class="img">
-                <img src="../port-folio/img/port-img.png" alt="port-img" class="img-fluid">
+                <img src="port-img.png" alt="port-img" class="img-fluid">
             </div>
 
         </div>
