--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href=" https://techyshruti.github.io/hospitalitytech/">
-      <img src="../port-folio/img/hospitality.jpg" alt="Mountains" width="600" height="400">
+      <img src="./img/hospitality.jpg" alt="Mountains" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here </div>
   </div>
@@ -287,7 +287,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="  https://techyshruti.github.io/paradisechef-s/">
-      <img src="../port-folio/img/chef-para.jpg" alt="Cinque Terre" width="600" height="400">
+      <img src="./img/chef-para.jpg" alt="Cinque Terre" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here</div>
   </div>
