--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href=" https://techyshruti.github.io/fabeauty2021/">
-      <img src="../port-folio/img/fabeauty.jpg" alt="Cinque Terre" width="600" height="400">
+      <img src=".img/fabeauty.jpg" alt="Cinque Terre" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here</div>
   </div>
@@ -261,7 +261,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img_lights.jpg">
-      <img src="../port-folio/img/jewellery.jpg" alt="Northern Lights" width="600" height="400">
+      <img src="./img/jewellery.jpg" alt="Northern Lights" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here</div>
   </div>
@@ -297,7 +297,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="  https://techyshruti.github.io/ComfyFashion/">
-      <img src="../port-folio/img/comfyfashion.jpg" alt="Forest" width="600" height="400">
+      <img src="./img/comfyfashion.jpg" alt="Forest" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here</div>
   </div>
