--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <br> <br><div class="row">
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
       <a target="_blank" href="int-1.jpg">  
-      <img src="../port-folio/img/graphic/img-1.jpg" class="img-fluid img-thumbnail">
+      <img src="./img/graphic/img-1.jpg" class="img-fluid img-thumbnail">
       </a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
