--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
         <a target="_blank" href="int-2.jpg"> 
-        <img src="../port-folio/img/graphic/img-2.jpg" class="img-fluid img-thumbnail">
+        <img src="./img/graphic/img-2.jpg" class="img-fluid img-thumbnail">
         </a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-12">
-          <img src="../port-folio/img/graphic/img-3.jpg" class="img-fluid img-thumbnail">
+          <img src="./img/graphic/img-3.jpg" class="img-fluid img-thumbnail">
           </div>
     </div>
     <br>
