--- a/index.html
+++ b/index.html
@@ -255,17 +255,17 @@
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
         <a target="_blank" href="int-4.jpg">
-      <img src="../port-folio/img/graphic/img-4.jpg" class="img-fluid img-thumbnail">
+      <img src="./graphic/img-4.jpg" class="img-fluid img-thumbnail">
       </a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
         <a target="_blank" href="int-5.jpg">
-        <img src="../port-folio/img/graphic/img-5.jpg" class="img-fluid img-thumbnail">
+        <img src="./img/graphic/img-5.jpg" class="img-fluid img-thumbnail">
       </a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-12">
           <a target="_blank" href="int-6-1.jpg">
-          <img src="../port-folio/img/graphic/img-6.jpg" class="img-fluid img-thumbnail">
+          <img src="./img/graphic/img-6.jpg" class="img-fluid img-thumbnail">
         </a>
           </div>
     </div>
