--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
         <a target="_blank" href="int-4.jpg">
-      <img src="./graphic/img-4.jpg" class="img-fluid img-thumbnail">
+      <img src="./img-4.jpg" class="img-fluid img-thumbnail">
       </a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
