--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-         <img src=".img/logo/tech logo.png" alt=""></a>
+         <img src=".img/tech logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -273,17 +273,17 @@
     <div class="row">
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
         <a target="_blank" href="int-4.jpg">
-      <img src="../port-folio/img/graphic/img-7.jpg" class="img-fluid img-thumbnail">
+      <img src=".img/graphic/img-7.jpg" class="img-fluid img-thumbnail">
       </a>
       </div>
       <div class="col-lg-4 col-md-4 col-sm-4 col-12">
         <a target="_blank" href="int-5.jpg">
-        <img src="../port-folio/img/graphic/img-9.jpg" class="img-fluid img-thumbnail">
+        <img src="./img/graphic/img-9.jpg" class="img-fluid img-thumbnail">
       </a>
         </div>
         <div class="col-lg-4 col-md-4 col-sm-4 col-12">
           <a target="_blank" href="int-6-1.jpg">
-          <img src="../port-folio/img/graphic/img-8.jpg" class="img-fluid img-thumbnail">
+          <img src="./img/graphic/img-8.jpg" class="img-fluid img-thumbnail">
         </a>
           </div>
     </div>
