--- a/index.html
+++ b/index.html
@@ -229,6 +229,104 @@
     </div>
   </section>
   </div>
+
+    <div id="port">
+  <sectiob class="section-4">
+    <div class="container">
+      <div class="row">
+        <h2 style="text-align: center;" >Website Work</h2>
+
+<h4 style="text-align: center;">A collection of some website projects.</h4>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href=" https://techyshruti.github.io/fabeauty2021/">
+      <img src="../port-folio/img/fabeauty.jpg" alt="Cinque Terre" width="600" height="400">
+    </a>
+    <div class="desc">For More Detail Click Here</div>
+  </div>
+</div>
+
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href=" https://techyshruti.github.io/bloomVnature/">
+      <img src="../port-folio/img/flower-shop.jpg" alt="Forest" width="600" height="400">
+    </a>
+    <div class="desc">For More Detail Click Here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="img_lights.jpg">
+      <img src="../port-folio/img/jewellery.jpg" alt="Northern Lights" width="600" height="400">
+    </a>
+    <div class="desc">For More Detail Click Here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href=" https://techyshruti.github.io/hospitalitytech/">
+      <img src="../port-folio/img/hospitality.jpg" alt="Mountains" width="600" height="400">
+    </a>
+    <div class="desc">For More Detail Click Here </div>
+  </div>
+</div>
+
+<div class="clearfix"></div>
+
+<br>
+
+<!-- <h2>Responsive Image Gallery</h2>
+
+<h4>Resize the browser window to see the effect.</h4>-->
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="  https://techyshruti.github.io/paradisechef-s/">
+      <img src="../port-folio/img/chef-para.jpg" alt="Cinque Terre" width="600" height="400">
+    </a>
+    <div class="desc">For More Detail Click Here</div>
+  </div>
+</div>
+
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="  https://techyshruti.github.io/ComfyFashion/">
+      <img src="../port-folio/img/comfyfashion.jpg" alt="Forest" width="600" height="400">
+    </a>
+    <div class="desc">For More Detail Click Here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href=" https://techyshruti.github.io/InDterior.com/">
+      <img src="../port-folio/img/inter.jpg" alt="Northern Lights" width="600" height="400">
+    </a>
+    <div class="desc">For More Detail Click Here</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href=" https://techyshruti.github.io/FoodFusionZone/">
+      <img src="../port-folio/img/food-fusion.jpg" alt="Mountains" width="600" height="400">
+    </a>
+    <div class="desc">For More Detail Click Here</div>
+  </div>
+</div>
+
+<div class="clearfix"></div>
+
+
+      </div>
+    </div>
+  </section>
+  </div>
  
   <div id="port">
   <section class="section-5">
