--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href=" https://techyshruti.github.io/fabeauty2021/">
-      <img src="../port-folio/img/fabeauty.jpg" alt="Cinque Terre" width="600" height="400">
+      <img src="./img/fabeauty.jpg" alt="Cinque Terre" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here</div>
   </div>
