--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href=" https://techyshruti.github.io/bloomVnature/">
-      <img src="../port-folio/img/flower-shop.jpg" alt="Forest" width="600" height="400">
+      <img src="./img/flower-shop.jpg" alt="Forest" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here</div>
   </div>
@@ -260,7 +260,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="img_lights.jpg">
-      <img src="../port-folio/img/jewellery.jpg" alt="Northern Lights" width="600" height="400">
+      <img src="./img/jewellery.jpg" alt="Northern Lights" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here</div>
   </div>
@@ -269,7 +269,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href=" https://techyshruti.github.io/hospitalitytech/">
-      <img src="../port-folio/img/hospitality.jpg" alt="Mountains" width="600" height="400">
+      <img src="./img/hospitality.jpg" alt="Mountains" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here </div>
   </div>
@@ -286,7 +286,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="  https://techyshruti.github.io/paradisechef-s/">
-      <img src="../port-folio/img/chef-para.jpg" alt="Cinque Terre" width="600" height="400">
+      <img src="./img/chef-para.jpg" alt="Cinque Terre" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here</div>
   </div>
@@ -296,7 +296,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="  https://techyshruti.github.io/ComfyFashion/">
-      <img src="../port-folio/img/comfyfashion.jpg" alt="Forest" width="600" height="400">
+      <img src="./img/comfyfashion.jpg" alt="Forest" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here</div>
   </div>
@@ -305,7 +305,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href=" https://techyshruti.github.io/InDterior.com/">
-      <img src="../port-folio/img/inter.jpg" alt="Northern Lights" width="600" height="400">
+      <img src="./img/inter.jpg" alt="Northern Lights" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here</div>
   </div>
@@ -314,7 +314,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href=" https://techyshruti.github.io/FoodFusionZone/">
-      <img src="../port-folio/img/food-fusion.jpg" alt="Mountains" width="600" height="400">
+      <img src="./img/food-fusion.jpg" alt="Mountains" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here</div>
   </div>
