--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                             <div class="footer-column col-lg-7 col-md-6 col-sm-12">
                                 <div class="footer-widget about-widget">
                                     <div class="logo">
-                                        <a href="#"><img src="../port-folio/img/logo/tech logo.png" alt="" /></a>
+                                        <a href="#"><img src="./img/logo/tech logo.png" alt="" /></a>
                                     </div>
                                     <div class="text">
                                         <p>We create visual concepts to communicate ideas and information through various mediums like print, digital, and web.</p>
