--- a/index.html
+++ b/index.html
@@ -455,9 +455,9 @@
                                 <div class="footer-widget info-widget">
                                     <h2 style="color: white;">Contact Info</h2>
                                     <ul class="info-list">
-                                        <li>Flat 20, Reynolds Neck, North Hele naville, FV77 8WS</li>
+                                        <li>Flat 20, Reynolds Neck, North Delhi naville</li>
                                         <li>+2(305) 587-3407</li>
-                                        <li>info@morris.com</li>
+                                        <li>info@techdesign.com</li>
                                     </ul>
                                     <!-- Social Links -->
                                     <ul class="social-links">
