--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
   </div>
   <div class="card-body">
     <blockquote class="blockquote mb-0">
-      <p>Graduation From C.U</p>
-      <footer class="blockquote-footer">Completed <cite title="Source Title">2013</cite></footer>
+      <p>Web Designing & Development</p>
+      <footer class="blockquote-footer">Completed <cite title="Source Title">2017</cite></footer>
     </blockquote>
   </div>
 </div>
