--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <button type="button" class="btn btn-outline-danger">CSS</button>
     <button type="button" class="btn btn-outline-danger">JS</button> 
     <button type="button" class="btn btn-outline-danger">PHP</button>
-    <br><br><button type="button" class="btn btn-danger">Download C.V</button>
+    <br><br><a href="./img/Tech-C.V.pdf"><button type="button" class="btn btn-danger">Download C.V</button></a>
 
  </div>
      </div>
