--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_lights.jpg">
+    <a target="_blank" https://techyshruti.github.io/jewellerytech/">
       <img src="./img/jewellery.jpg" alt="Northern Lights" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here</div>
