--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" https://techyshruti.github.io/jewellerytech/">
-      <img src="./img/jewellery.jpg" alt="Northern Lights" width="600" height="400">
+    <a target="_blank" href"= https://techyshruti.github.io/jewellerytech/">
+      <img src="./img/jewellery.jpg" alt="jewellery" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here</div>
   </div>
@@ -269,7 +269,7 @@
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href=" https://techyshruti.github.io/hospitalitytech/">
-      <img src="./img/hospitality.jpg" alt="Mountains" width="600" height="400">
+      <img src="./img/hospitality.jpg" alt="hospitality" width="600" height="400">
     </a>
     <div class="desc">For More Detail Click Here </div>
   </div>
