--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
  <div class="col-md-7 col-sm-12">
     <h2>About Me</h2>
     <p>Hello, I am shruti, web & graphic designer.
-    I have reach experience in web site design& building and customization
+    I have reach experience in web site design & building and customization.
     </p>
     <button type="button" class="btn btn-outline-danger">HTML</button>
     <button type="button" class="btn btn-outline-danger">CSS</button>
@@ -219,7 +219,7 @@
   <div class="card-body">
     <blockquote class="blockquote mb-0">
       <p>Web Designer</p>
-      <footer class="blockquote-footer">Global Trendz<cite title="Source Title">2023</cite></footer>
+      <footer class="blockquote-footer">Global Trendz<cite title="Source Title"> 2023</cite></footer>
     </blockquote>
   </div>
 </div>
